--- a/RIFF.Service/log4net.config
+++ b/RIFF.Service/log4net.config
@@ -48,14 +48,14 @@
     <port value="25" />
     <enableSsl value="false" />
     <lossy value="false" />
-    <bufferSize value="10" />
+    <bufferSize value="1" />
     <filter type="log4net.Filter.LevelRangeFilter">
       <levelMin value="ERROR" />
       <levelMax value="FATAL" />
     </filter>
-    <evaluator type="log4net.Core.TimeEvaluator">
+    <!--<evaluator type="log4net.Core.TimeEvaluator">
       <interval value="10" />
-    </evaluator>
+    </evaluator>-->
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%newline%date %-5level %appdomain (%thread/%property{NDC}) - %message%newline%newline%newline" />
     </layout>
