--- a/RIFF.Core/packages.config
+++ b/RIFF.Core/packages.config
@@ -12,5 +12,6 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
 </packages>
