--- a/RIFF.Core/packages.config
+++ b/RIFF.Core/packages.config
@@ -3,7 +3,8 @@
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net48" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
-  <package id="log4net" version="2.0.8" targetFramework="net48" />
+  <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net48" />
+  <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net48" />
   <package id="MediaTypeMap" version="2.1.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
