--- a/RIFF.Core/RIFF.Core.csproj
+++ b/RIFF.Core/RIFF.Core.csproj
@@ -72,6 +72,9 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="RabbitMQ.Client, Version=6.0.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <HintPath>..\packages\RabbitMQ.Client.6.2.1\lib\net461\RabbitMQ.Client.dll</HintPath>
+    </Reference>
     <Reference Include="RazorEngine, Version=3.10.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <HintPath>..\packages\RazorEngine.3.10.0\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
@@ -109,6 +112,12 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Threading.Channels, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Channels.4.7.1\lib\net461\System.Threading.Channels.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Threading.Thread" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
@@ -191,9 +200,13 @@
     <Compile Include="Graph\RFGraphReactor.cs" />
     <Compile Include="Queue\IRFDispatchQueue.cs" />
     <Compile Include="Queue\RFBufferingSink.cs" />
+    <Compile Include="Queue\RFDispatchQueueMonitorRabbitMQ.cs" />
     <Compile Include="Queue\RFDispatchStoreSQL.cs" />
+    <Compile Include="Queue\RFEventSinkRabbitMQ.cs" />
     <Compile Include="Queue\RFEventSinkMSMQ.cs" />
+    <Compile Include="Queue\RFFormatterRabbitMQ.cs" />
     <Compile Include="Queue\RFFormatterMSMQ.cs" />
+    <Compile Include="Queue\RFWorkDoneMonitorRabbitMQ.cs" />
     <Compile Include="Queue\RFWorkDoneMonitorMSMQ.cs" />
     <Compile Include="Queue\RFRequestTracker.cs" />
     <Compile Include="Queue\RFSingleCommandTrigger.cs" />
@@ -219,6 +232,7 @@
     <Compile Include="Graph\RFGraphMapper.cs" />
     <Compile Include="Queue\RFGraphDispatchQueue.cs" />
     <Compile Include="Queue\RFDispatchQueueSink.cs" />
+    <Compile Include="Queue\RFWorkerThreadRabbitMQ.cs" />
     <Compile Include="Queue\RFWorkerThreadMSMQ.cs" />
     <Compile Include="Queue\RFWorkQueueItem.cs" />
     <Compile Include="Queue\RFDispatchQueueMonitorInProc.cs" />
