--- a/RIFF.Core/packages.config
+++ b/RIFF.Core/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Net.Compilers" version="3.9.0" targetFramework="net48" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="RabbitMQ.Client" version="6.2.1" targetFramework="net48" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
@@ -18,5 +19,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Channels" version="4.7.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net48" />
 </packages>
